After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 730666 - gl: YUY2 conversion broken in GLES2
gl: YUY2 conversion broken in GLES2
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal blocker
: 1.3.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-23 23:54 UTC by Nicolas Dufresne (ndufresne)
Modified: 2014-05-24 13:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix YUY2 support with luminance_alpha texture (2.98 KB, patch)
2014-05-24 03:04 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2014-05-23 23:54:37 UTC
I've tested all other formats, only one it still broken in GLES. I can reproduce on MESA and on libMALI based target.

GST_GL_API=gles2 gst-launch-1.0 videotestsrc ! video/x-raw,format=YUY2 ! glimagesink

And what it looks like on libMALI http://people.collabora.com/~nicolas/YUY2.png On MESA there is no ping, it's all greenish.
Comment 1 Nicolas Dufresne (ndufresne) 2014-05-23 23:56:53 UTC
Another interesting fact, UYVY works.
Comment 2 Nicolas Dufresne (ndufresne) 2014-05-24 02:40:03 UTC
Another note, texture_rg = 0. the error is that we use RG instead of RA when indexing.

https://www.opengl.org/registry/specs/EXT/texture.txt

So for UYVY it's fine, but for YUY2, we endup not reading undefined values.
Comment 3 Nicolas Dufresne (ndufresne) 2014-05-24 03:04:31 UTC
Created attachment 277097 [details] [review]
Fix YUY2 support with luminance_alpha texture

Here's a proposed patch, it's a bit intrusive because I tried not to have to add 4 new parameters to the shaders (would have been 2 time the same, got 2 now).
Comment 4 Matthew Waters (ystreet00) 2014-05-24 08:10:20 UTC
Review of attachment 277097 [details] [review]:

Looks good
Comment 5 Nicolas Dufresne (ndufresne) 2014-05-24 13:22:47 UTC
Comment on attachment 277097 [details] [review]
Fix YUY2 support with luminance_alpha texture

commit a7866aa9e58d1249431a8754288231f21b141d39
Author: Nicolas Dufresne <nicolas.dufresne@collabora.com>
Date:   Fri May 23 23:02:32 2014 -0400

    glcolorconvert: Fix YUY2 and UYVY support with luminance_alpha
    
    https://bugzilla.gnome.org/show_bug.cgi?id=730666