glcolorconvert: Fix YUY2 and UYVY support with luminance_alpha

https://bugzilla.gnome.org/show_bug.cgi?id=730666